--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Appointments#index</h1>
-<p>Find me in app/views/appointments/index.html.erb</p>
+<h1><%= @user.name %>: Appointments</h1>
+<%= link_to 'Add Appointment', new_user_appointment_path(@user) %>
+<hr />
+
+
+<ul>
+  <% @appointments.each do |appointment| %>
+    <li>
+      <%= appointment.appointment_date %>
+      <%= appointment.appointment_description %>
+      <br />
+      <%= link_to 'Edit', edit_user_appointment_path(@user, appointment) %>
+      <%= link_to 'Remove', user_appointment_path(@user, appointment), method: :delete %>
+   </li>
+ <% end %>
+</ul>
