--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -5,7 +5,9 @@
 <ul>
 <% @doctors.each do |doctor| %>
 <li>
-<%= link_to doctor.name, edit_doctor_path(doctor) %>
+<%= link_to doctor.name, doctor_path(doctor) %>
+<%= link_to "Edit", edit_doctor_path(doctor) %>
+<%= link_to "Delete", doctor, method: :delete %>
 </li>
 <% end %>
 </ul>
