--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Doctors#show</h1>
-<p>Find me in app/views/doctors/show.html.erb</p>
+<h1><%= @doctor.name %></h1>
+<%= link_to "Edit", edit_doctor_path(@doctor) %>
+<%= link_to "Delete", @doctor, method: :delete %>
