--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,9 @@
 <ul>
 <% @users.each do |user| %>
 <li>
-<%= link_to user.name, edit_user_path(user) %>
+<%= link_to user.name, user_path(user) %>
+<%= link_to "Edit", edit_user_path(user) %>
+<%= link_to "Delete", user, method: :delete %>
 </li>
 <% end %>
 </ul>
