--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1><%= @user.name %></h1>
+<%= link_to "Edit", edit_user_path(@user) %>
+<%= link_to "Delete", @user, method: :delete %>
+<%= link_to "See Appointments", user_appointments_path(@user) %>
