updated doctors selection

--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,16 +1,18 @@
 <%= @appointment.id ? "Edit Appointment" : "Create New Appointment" %>
 
 <%= form_with(model: [@user, @appointment], local:true) do |f| %>
+<div>
   <%=f.label :appointment_date %>
   <%=f.date_field :appointment_date, required: true %>
-  
+</div>
+<div>
   <%=f.label :appointment_description %>
   <%=f.text_field :appointment_description, required: true %>
-
-
-  <% f.label :doctor %>
-  <% f.select :doctor_id, @doctors.collect{ |d| [d.name, d.id]} %>
-
+</div>
+<div>
+  <%= f.label :doctor %>
+  <%= f.select :doctor_id, Doctor.all.collect{ |d| [d.name, d.id]} %>
+</div>
 
    <%=f.submit  %>
 <% end %>
